<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:elevation="2dp">

        <EditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginRight="10dp"
            android:autofillHints="@string/email"
            android:background="@drawable/input_search_border"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:fontFamily="@font/rasa"
            android:textSize="20dp"
            />

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/search_border"
            android:contentDescription="@string/search"
            android:foreground="@drawable/ic_baseline_search_24"
            />
    </LinearLayout>

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
</FrameLayout>